# market_monitor

./: .gitignore  Cargo.toml  beverages.db  readme.md
src/: db_control.rs  main.rs  setup_db.rs
static/: index.html  index.js  input.css  input.html  input.js  style.css
