[package]
name = "market_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
rusqlite = "0.31.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rocket]
version = "0.5.1"
features = ["json"]

[dependencies.libsqlite3-sys]
version = "0.28.0"
features = ["bundled"]
